# lua-obfuscator

./: .gitignore  CMakeLists.txt  README.md
lib/bytecode/: chunk.hpp  constant.hpp  datatypes.hpp  deserializer.hpp  instruction.hpp  serializer.hpp
lib/deserializer/: chunk.hpp  constant.hpp  deserializer.hpp  instruction.hpp
lib/opcodes/: op_add.hpp  op_call.hpp  op_close.hpp  op_closure.hpp  op_concat.hpp  op_div.hpp  op_eq.hpp  op_forloop.hpp  op_forprep.hpp  op_getglobal.hpp  op_gettable.hpp  op_getupval.hpp  op_jmp.hpp  op_le.hpp  op_len.hpp  op_loadbool.hpp  op_loadk.hpp  op_loadnil.hpp  op_lt.hpp  op_mod.hpp  op_move.hpp  op_mul.hpp  op_newtable.hpp  op_not.hpp  op_pow.hpp  op_return.hpp  op_self.hpp  op_setglobal.hpp  op_setlist.hpp  op_settable.hpp  op_setupval.hpp  op_sub.hpp  op_tailcall.hpp  op_test.hpp  op_testset.hpp  op_tforloop.hpp  op_unm.hpp  op_vararg.hpp  opcodes.hpp  vopcode.hpp
lib/vm/: generator.hpp
src/: CMakeLists.txt  main.cpp
src/bytecode/: chunk.cpp  constant.cpp  deserializer.cpp  instruction.cpp  serializer.cpp
src/deserializer/: chunk.cpp  constant.cpp  deserializer.cpp  instruction.cpp
src/vm/: generator.cpp
test/: closures_v1.lua  closures_v2.lua  fizzbuzz_v1.lua  fizzbuzz_v2.lua  for_generic.lua  for_numeric.lua  hello_world.lua  upvalues_v1.lua  upvalues_v2.lua
